:bug: Overlapping css classes

--- a/src/AboutMe.css
+++ b/src/AboutMe.css
@@ -25,7 +25,7 @@
     color: #f0f0f0;
 }
 
-.image-container {
+.me-image-container {
     display: flex;
     justify-content: center;
     align-items: center;
